@@ -18,6 +18,7 @@ install: build
 	dh_testroot
 	dh_clean -k
 	dh_install main-menu usr/bin
+	dh_installdirs lib/main-menu.d lib/main-menu-pre.d lib/main-menu-post.d
 
 binary-indep: build install
 
