@@ -1,5 +1,11 @@
 main-menu (1.10) UNRELEASED; urgency=low
 
+  [ Sylvain Ferriol ]
+  * Add pre and post scripts execution for a menu item. It is useful
+    if you want to interact in the installation process without creating
+    a specific udeb package for that.
+	
+  [ Joey Hess ]
   * If a default menu item cannot be determined, drop priority to avoid
     looping.
 
